--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="App to share secret messages." />
         <title>Secret Message</title>
+        <script src="./src/index.ts" type="module" defer></script>
     </head>
-    <body></body>
+    <body>
+        <main>
+            <div class="container">
+                <form id="message-form">
+                    <h1>Secret Message</h1>
+                    <div class="form-field">
+                        <input id="message-input" placeholder="Write your message..." aria-label="Message Input" />
+                        <span class="error-msg hidden">Enter your message</span>
+                    </div>
+                    <button>Create</button>
+                </form>
+            </div>
+        </main>
+    </body>
 </html>
